--- a/src/templates/exportService.hbs
+++ b/src/templates/exportService.hbs
@@ -72,7 +72,7 @@ export class {{{name}}} {
             responseHeader: '{{{responseHeader}}}',
             {{/if}}
         });
-        return result.body;
+        return result
     }
 
     {{/each}}
